# mManage

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 8b883c37109d_first.py  d45e301e2fc0_2nd.py
app/: database.py  dependencies.py  enums.py  main.py  models.py  settings.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/routers/: auth.py  comments.py  notifications.py  projects.py  tasks.py  users.py
app/schemas/: __init__.py  auth.py  comments.py  notifications.py  projects.py  tasks.py  users.py
app/services/: __init__.py  projects.py  tasks.py  users.py
